# result_streamlit

./: .gitignore  Dockerfile  README.md  docker-compose.yml  generated_doc.docx  insightify.py  main.py  packages.txt  pdf_uploader.py  pyoxidizer.bzl  pyproject.toml  requirements.txt  setup.py  template.docx  ~$mplate.docx
.devcontainer/: devcontainer.json
insightify/: __main__.py  app.py  template.docx
utils/: generate_df_filter.py
